package sample;

public class Doctor extends Nurse {

    public Doctor(String name, String surname, String username, String password){
        super(name, surname, username, password);
    }
}
