@startuml

title __ELABORATOINGEGNERIA's Class Diagram__\n

  namespace sample {
    class sample.Administration {
    }
  }
  

  namespace sample {
    class sample.Datastore {
    }
  }
  

  namespace sample {
    class sample.Doctor {
    }
  }
  

  namespace sample {
    class sample.Main {
    }
  }
  

  namespace sample {
    class sample.Nurse {
    }
  }
  

  namespace sample {
    class sample.Patient {
    }
  }
  

  namespace sample {
    class sample.Prescription {
    }
  }
  

  namespace sample {
    interface sample.User {
    }
  }
  

  namespace sample {
    namespace gui {
      class sample.gui.HomeController {
      }
    }
  }
  

  namespace sample {
    namespace gui {
      class sample.gui.LoginController {
      }
    }
  }
  

  namespace sample {
    namespace gui {
      class sample.gui.PatientListController {
      }
    }
  }
  

  namespace sample {
    namespace gui {
      class sample.gui.PatientPageController {
      }
    }
  }
  

  sample.Administration .up.|> java.io.Serializable
  sample.Administration o-- sample.Prescription : prescription
  sample.Doctor -up-|> sample.Nurse
  sample.Main -up-|> javafx.application.Application
  sample.Nurse .up.|> java.io.Serializable
  sample.Nurse .up.|> sample.User
  sample.Patient .up.|> java.io.Serializable
  sample.Prescription .up.|> java.io.Serializable
  sample.Prescription o-- sample.User : doctor
  sample.gui.PatientListController .up.|> javafx.fxml.Initializable
  sample.gui.PatientPageController .up.|> javafx.fxml.Initializable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
